coloquei o layout feito anteriormente dentro de um projeto node/express

--- a/public/stylesheets/PaginaInicial.css
+++ b/public/stylesheets/PaginaInicial.css
@@ -1,4 +1,7 @@
- .u-section-1 {
+
+
+
+.u-section-1 {
   min-height: 50vw;
 }
 
@@ -147,7 +150,7 @@
 .u-section-2 .u-image-1 {
   width: 313px;
   height: 313px;
-  background-image: url("images/IMG_20210531_083352792_MP1.jpg");
+  background-image: url("../images/IMG_20210531_083352792_MP1.jpg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
@@ -250,7 +253,7 @@
 
 .u-section-3 .u-image-1 {
   min-height: 400px;
-  background-image: url("images/campgrounds.png");
+  background-image: url("../images/campgrounds.png");
   background-position: 50% 50%;
 }
 
