--- a/views/PaginaInicial.ejs
+++ b/views/PaginaInicial.ejs
@@ -21,14 +21,14 @@
 <body class="u-body u-overlap">
   <section class="u-clearfix u-section-1" id="carousel_c042">
     <div class="u-expanded-width u-grey-75 u-shape u-shape-rectangle u-shape-1"></div>
-    <img class="u-image u-image-default u-image-1" src="images/Web_Design_and_Development.jpg" data-image-width="1600"
+    <img class="u-image u-image-default u-image-1" src="images/Project_13_27_3.jpg" data-image-width="1600"
       data-image-height="1089">
     <div class="u-container-style u-group u-opacity u-opacity-25 u-shape-rectangle u-group-1">
       <div class="u-container-layout u-container-layout-1">
         <h1 class="u-custom-font u-font-montserrat u-text u-text-white u-text-1">Tenha seu site de forma fácil e rápida
           sem precisar saber programar</h1>
         <h6 class="u-custom-font u-font-montserrat u-text u-text-2">Tenha seu site em uma semana</h6>
-        <a href="https://nicepage.com/joomla-page-builder"
+        <a href="#sec-73ec"
           class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-1">Peça
           Já</a>
       </div>
@@ -74,7 +74,7 @@
                 <p class="u-text u-text-2">Este é um dos projetos que já construí além desse site.<br>Ele é um site de
                   compartilhamento de acampamentos.
                 </p>
-                <a href=""
+                <a href="https://mycodeyelpcamp.herokuapp.com/"
                   class="u-border-1 u-border-black u-border-hover-palette-2-base u-btn u-btn-rectangle u-button-style u-none u-text-body-color u-text-hover-palette-2-base u-btn-1">Abrir
                   site</a>
               </div>
@@ -88,7 +88,8 @@
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <p class="u-large-text u-text u-text-variant u-text-1">Se você se interessar por mais projetos e sites que
         construí, acesse meu github.</p>
-      <a href="" class="u-border-2 u-border-grey-dark-1 u-btn u-btn-round u-button-style u-radius-50 u-btn-1">Acessar
+      <a href="https://github.com/AugustoHide"
+        class="u-border-2 u-border-grey-dark-1 u-btn u-btn-round u-button-style u-radius-50 u-btn-1">Acessar
         github</a>
     </div>
   </section>
@@ -96,29 +97,29 @@
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <h1 class="u-text u-text-default u-text-1">Peça já seu site</h1>
       <div class="u-form u-form-1">
-        <form action="#" method="POST" class="u-clearfix u-form-spacing-20 u-form-vertical u-inner-form"
+        <form action="" method="POST" class="u-clearfix u-form-spacing-20 u-form-vertical u-inner-form"
           style="padding: 10px" source="custom" name="form">
           <div class="u-form-group u-form-name">
             <label for="name-3b9a" class="u-form-control-hidden u-label">Name</label>
-            <input type="text" placeholder="Enter your Name" id="name-3b9a" name="name"
+            <input type="text" placeholder="Nome" id="name-3b9a" name="name"
               class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-1"
               required="">
           </div>
           <div class="u-form-email u-form-group">
             <label for="email-3b9a" class="u-form-control-hidden u-label">Email</label>
-            <input type="email" placeholder="Enter a valid email address" id="email-3b9a" name="email"
+            <input type="email" placeholder="Email" id="email-3b9a" name="email"
               class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-2"
               required="">
           </div>
           <div class="u-form-group u-form-message">
             <label for="message-3b9a" class="u-form-control-hidden u-label">Message</label>
-            <textarea placeholder="Enter your message" rows="4" cols="50" id="message-3b9a" name="message"
+            <textarea placeholder="Objetivo e descrição do site" rows="4" cols="50" id="message-3b9a" name="message"
               class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-3"
               required=""></textarea>
           </div>
           <div class="u-align-center u-form-group u-form-submit">
-            <a href="#"
-              class="u-border-2 u-border-black u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1">Submit</a>
+            <a href=""
+              class="u-border-2 u-border-black u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1">Pedir</a>
             <input type="submit" value="submit" class="u-form-control-hidden">
           </div>
           <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
@@ -142,7 +143,8 @@
             <div class="u-align-center u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
               <div class="u-container-layout u-valign-middle u-container-layout-2">
                 <div class="u-social-icons u-spacing-10 u-social-icons-1">
-                  <a class="u-social-url" title="facebook" target="_blank" href="https://facebook.com/name"><span
+                  <a class="u-social-url" title="facebook" target="_blank"
+                    href="https://facebook.com/people/Augusto-H-Sakihama/100004323585891/"><span
                       class="u-icon u-social-facebook u-social-icon u-icon-1"><svg class="u-svg-link"
                         preserveAspectRatio="xMidYMin slice" viewBox="0 0 112.196 112.196" style="">
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-194c"></use>
@@ -156,7 +158,8 @@
                         </g>
                       </svg></span>
                   </a>
-                  <a class="u-social-url" target="_blank" data-type="Instagram" title="Instagram" href=""><span
+                  <a class="u-social-url" target="_blank" data-type="Instagram" title="Instagram"
+                    href="https://www.instagram.com/augustoh.sakihama/"><span
                       class="u-icon u-social-icon u-social-instagram u-icon-2"><svg class="u-svg-link"
                         preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style="">
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-7eb4"></use>
@@ -174,7 +177,8 @@
             c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path>
                       </svg></span>
                   </a>
-                  <a class="u-social-url" target="_blank" data-type="LinkedIn" title="LinkedIn" href=""><span
+                  <a class="u-social-url" target="_blank" data-type="LinkedIn" title="LinkedIn"
+                    href="https://www.linkedin.com/in/augusto-sakihama/"><span
                       class="u-icon u-social-icon u-social-linkedin u-icon-3"><svg class="u-svg-link"
                         preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style="">
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-0e51"></use>
@@ -200,17 +204,7 @@
       <p class="u-small-text u-text u-text-variant u-text-1">Site criado por Augusto H.S.</p>
     </div>
   </footer>
-  <section class="u-backlink u-clearfix u-grey-80">
-    <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-      <span>Website Templates</span>
-    </a>
-    <p class="u-text">
-      <span>created with</span>
-    </p>
-    <a class="u-link" href="" target="_blank">
-      <span>Website Builder Software</span>
-    </a>.
-  </section>
+
 </body>
 
 </html>
