melhorias pra SEO

--- a/views/PaginaInicial.ejs
+++ b/views/PaginaInicial.ejs
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
 
-  <title>Página Inicial</title>
+  <title>Tenha seu site de forma descomplicada em uma semana</title>
+  <meta name="description"
+    content="Diga suas necessidades, objetivos e requisitos para o seu site, e criarei seu site como você quer. Você não precisará saber nada de programação, a cada parte do site que eu fizer, seja o layout ou funcionalidades, vou ir te mostrando para aprovação. Assim garanto que o site esteja nos seus conformes.">
   <link rel="stylesheet" type="text/css" href="stylesheets/nicepage.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/PaginaInicial.css">
   <!-- <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script> -->
@@ -95,7 +97,7 @@
   </section>
   <section class="u-align-center u-clearfix u-grey-5 u-section-5" id="sec-73ec">
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-      <h1 class="u-text u-text-default u-text-1">Peça já seu site</h1>
+      <h2 class="u-text u-text-default u-text-1">Peça já seu site</h2>
       <div class="u-form u-form-1">
         <form action="" method="POST" class="u-clearfix u-form-spacing-20 u-form-vertical u-inner-form"
           style="padding: 10px" source="custom" name="form">
