melhorias para seo:1.por alt.2.redirecionar para https

--- a/views/PaginaInicial.ejs
+++ b/views/PaginaInicial.ejs
@@ -24,7 +24,7 @@
   <section class="u-clearfix u-section-1" id="carousel_c042">
     <div class="u-expanded-width u-grey-75 u-shape u-shape-rectangle u-shape-1"></div>
     <img class="u-image u-image-default u-image-1" src="images/Project_13_27_3.jpg" data-image-width="1600"
-      data-image-height="1089">
+      data-image-height="1089" alt="ilustração de criação de site">
     <div class="u-container-style u-group u-opacity u-opacity-25 u-shape-rectangle u-group-1">
       <div class="u-container-layout u-container-layout-1">
         <h1 class="u-custom-font u-font-montserrat u-text u-text-white u-text-1">Tenha seu site de forma fácil e rápida
