compressão de imagens utilizadas no site, para ter mais velocidade de carregamento

--- a/public/stylesheets/PaginaInicial.css
+++ b/public/stylesheets/PaginaInicial.css
@@ -151,7 +151,7 @@
 .u-section-2 .u-image-1 {
   width: 313px;
   height: 313px;
-  background-image: url("../images/IMG_20210531_083352792_MP1.jpg");
+  background-image: url("../images/fotoRosto_min.jpg");
   background-position: 50% 50%;
   margin: 0 auto;
 }
@@ -260,7 +260,7 @@
 
 .u-section-3 .u-image-1 {
   min-height: 400px;
-  background-image: url("../images/campgrounds.png");
+  background-image: url("../images/campgrounds-min.png");
   background-position: 50% 50%;
 }
 
