--- a/views/PaginaInicial.ejs
+++ b/views/PaginaInicial.ejs
@@ -23,7 +23,7 @@
 <body class="u-body u-overlap">
   <section class="u-clearfix u-section-1" id="carousel_c042">
     <div class="u-expanded-width u-grey-75 u-shape u-shape-rectangle u-shape-1"></div>
-    <img class="u-image u-image-default u-image-1" src="images/Project_13_27_3.jpg" data-image-width="1600"
+    <img class="u-image u-image-default u-image-1" src="images/ilustracaoConstrucao_min.jpg" data-image-width="1600"
       data-image-height="1089" alt="ilustração de criação de site">
     <div class="u-container-style u-group u-opacity u-opacity-25 u-shape-rectangle u-group-1">
       <div class="u-container-layout u-container-layout-1">
