correções no texto Sobre mim

--- a/views/PaginaInicial.ejs
+++ b/views/PaginaInicial.ejs
@@ -50,9 +50,10 @@
           <div class="u-container-style u-layout-cell u-right-cell u-size-35 u-layout-cell-2" src="">
             <div class="u-container-layout u-valign-middle u-container-layout-2">
               <h2 class="u-text u-text-palette-1-base u-text-1">Quem sou eu</h2>
-              <p class="u-text u-text-2">Sou programador web Full-stack júnior. Terminei diversos cursos de
-                desenvolvimento eb como The Web Developer Bootcamp 2021 e atualmente estou cursando Ciência da
-                Computação na UFMS.<br>Tenho conhecimentos em HTML, CSS, Javascript além de saber mexer com Node e
+              <p class="u-text u-text-2">Meu nome é Augusto Hide, sou programador web Full-stack júnior. Terminei
+                diversos cursos de
+                desenvolvimento web como The Web Developer Bootcamp 2021 e atualmente estou cursando Ciência da
+                Computação na UFMS.<br>Tenho conhecimentos em HTML, CSS, Javascript além de programar com Node e
                 Express.
               </p>
             </div>
