--- a/views/PaginaInicial.ejs
+++ b/views/PaginaInicial.ejs
@@ -23,11 +23,12 @@
 <body class="u-body u-overlap">
   <section class="u-clearfix u-section-1" id="carousel_c042">
     <div class="u-expanded-width u-grey-75 u-shape u-shape-rectangle u-shape-1"></div>
-    <img class="u-image u-image-default u-image-1" src="images/ilustracaoConstrucao_min.jpg" data-image-width="1600"
+    <img class="u-image u-image-default u-image-1" src="images/ilustracao1zoom.jpg" data-image-width="1600"
       data-image-height="1089" alt="ilustração de criação de site">
     <div class="u-container-style u-group u-opacity u-opacity-25 u-shape-rectangle u-group-1">
       <div class="u-container-layout u-container-layout-1">
-        <h1 class="u-custom-font u-font-montserrat u-text u-text-white u-text-1">Tenha seu site de forma fácil e rápida
+        <h1 class="u-custom-font u-font-montserrat u-text u-text-yellowBrown u-text-1">Tenha seu site de forma fácil e
+          rápida
           sem precisar saber programar</h1>
         <h6 class="u-custom-font u-font-montserrat u-text u-text-2">Tenha seu site em uma semana</h6>
         <a href="#sec-73ec"
@@ -100,35 +101,35 @@
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <h2 class="u-text u-text-default u-text-1">Peça já seu site</h2>
       <div class="u-form u-form-1">
-        <form action="" method="POST" class="u-clearfix u-form-spacing-20 u-form-vertical u-inner-form"
-          style="padding: 10px" source="custom" name="form">
+        <form action="/pedido" method="POST" class="u-clearfix u-form-spacing-20 u-form-vertical" style="padding: 10px">
           <div class="u-form-group u-form-name">
-            <label for="name-3b9a" class="u-form-control-hidden u-label">Name</label>
+            <label for="name-3b9a" class="u-form-control-hidden u-label">Seu Nome</label>
             <input type="text" placeholder="Nome" id="name-3b9a" name="name"
               class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-1"
               required="">
           </div>
           <div class="u-form-email u-form-group">
             <label for="email-3b9a" class="u-form-control-hidden u-label">Email</label>
-            <input type="email" placeholder="Email" id="email-3b9a" name="email"
+            <input type="email" placeholder="Email" id="email-3b9a" name="email@email.com"
               class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-2"
               required="">
           </div>
+          <div class="u-form-group u-form-name">
+            <label for="nameSite-3b9a" class="u-form-control-hidden u-label">Nome ou domínio do site</label>
+            <input type="text" placeholder="sitelegal.com" id="nameSite-3b9a" name="nameSite"
+              class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-1"
+              required="">
+          </div>
           <div class="u-form-group u-form-message">
-            <label for="message-3b9a" class="u-form-control-hidden u-label">Message</label>
-            <textarea placeholder="Objetivo e descrição do site" rows="4" cols="50" id="message-3b9a" name="message"
+            <label for="message-3b9a" class="u-form-control-hidden u-label">Descrição e objetivo do site</label>
+            <textarea placeholder="Este site é para minha loja ..." rows="4" cols="50" id="message-3b9a" name="message"
               class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-3"
               required=""></textarea>
           </div>
           <div class="u-align-center u-form-group u-form-submit">
-            <a href=""
-              class="u-border-2 u-border-black u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1">Pedir</a>
-            <input type="submit" value="submit" class="u-form-control-hidden">
+            <button type="submit"
+              class="u-border-2 u-border-black u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1">Pedir</button>
           </div>
-          <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
-          <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try
-            again. </div>
-          <input type="hidden" value="" name="recaptchaResponse">
         </form>
       </div>
     </div>
