completamento de funcionalidade de envio de email com pedido de site

--- a/views/PaginaInicial.ejs
+++ b/views/PaginaInicial.ejs
@@ -110,7 +110,7 @@
           </div>
           <div class="u-form-email u-form-group">
             <label for="email-3b9a" class="u-form-control-hidden u-label">Email</label>
-            <input type="email" placeholder="Email" id="email-3b9a" name="email@email.com"
+            <input type="email" placeholder="Email" id="email-3b9a" name="email"
               class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-2"
               required="">
           </div>
