--- a/views/peca-seu-site.ejs
+++ b/views/peca-seu-site.ejs
@@ -64,9 +64,7 @@
         <!-- Visibilidade -->
         <div class="val">
             <div class="val-content">
-                <div class="val-img" id="val-visibilidade">
-
-                </div>
+                <div class="val-img" id="val-visibilidade"></div>
                 <div class="val-txt">
                     <div class="val-txt-content">
                         <div class="val-title">
@@ -91,7 +89,7 @@
         </div>
         <!-- CREDIBILIDADE -->
         <div class="val">
-            <div class="val-content">
+            <div class="val-content" id="invert">
                 <div class="val-txt">
                     <div class="val-txt-content">
                         <div class="val-title">
@@ -145,7 +143,7 @@
         </div>
         <!-- cONVERSÃO DE CLIENTES -->
         <div class="val">
-            <div class="val-content">
+            <div class="val-content" id="invert">
                 <div class="val-txt">
                     <div class="val-txt-content">
                         <div class="val-title">
@@ -173,7 +171,7 @@
     <div id="cta-2">
         <div class="cta-1-txt-content" id="cta-2-txt-content">
             <div class="cta-1-title">
-                Quer conquistar mais clientes/pacientes ou ter mais pedidos de serviço?
+                Quer conquistar mais clientes / pacientes ou ter mais pedidos de serviço?
             </div>
             <div class="cta-2-subtitle" id="cta-2-subtitle">
                 Peça já seu site e conquiste novos clientes.
