Adição de interatividade e links nos botoes

--- a/views/peca-seu-site.ejs
+++ b/views/peca-seu-site.ejs
@@ -30,8 +30,10 @@
                         conseguindo novos clientes.
                     </div>
                     <div class="cta-btn-div">
-                        <button class="cta-btn">Pedir site</button>
-                        <button class="cta-btn">Saiba mais</button>
+                        <a class="cta-btn" href="https://wa.me/5567998051995?text=Eu%20quero%20pedir%20um%20site"
+                            target="_blank">Pedir
+                            site</a>
+                        <a class="cta-btn" href="#valores">Saiba mais</a>
                     </div>
                 </div>
             </div>
@@ -177,7 +179,9 @@
                 Peça já seu site e conquiste novos clientes.
             </div>
             <div class="cta-btn-div">
-                <button class="cta-btn-black" id="cta-btn-big">Pedir site</button>
+                <a class="cta-btn-black" id="cta-btn-big"
+                    href="https://wa.me/5567998051995?text=Eu%20quero%20pedir%20um%20site" target="_blank">Pedir
+                    site</a>
             </div>
         </div>
     </div>
