--- a/public/stylesheets/peca-seu-site-estilo.css
+++ b/public/stylesheets/peca-seu-site-estilo.css
@@ -70,6 +70,8 @@ body {
     font-size: 1rem;
     font-family: 'Playfair Display', serif;
     margin: 0.1rem;
+    transition: 0.625s;
+    text-decoration: none;
 }
 
 .cta-btn-black {
@@ -82,11 +84,24 @@ body {
     font-size: 1rem;
     font-family: 'Playfair Display', serif;
     margin: 0.1rem;
+    transition: 0.625s;
+    text-decoration: none;
 }
 
 #cta-btn-big {
     font-size: 1.5rem;
     padding: 0.75rem;
+}
+
+.cta-btn:hover {
+    font-size: 1.1rem;
+    background-color: #002134;
+}
+
+.cta-btn-black:hover {
+    font-size: 1.1rem;
+    background-color: antiquewhite;
+    color: #000;
 }
 
 #cta-2 {
