--- a/views/peca-seu-site.ejs
+++ b/views/peca-seu-site.ejs
@@ -185,6 +185,30 @@
             </div>
         </div>
     </div>
+
+    <!-- Quem sou -->
+    <div class="quem">
+        <div class="quem-content">
+            <div class="quem-foto"></div>
+            <div class="quem-txt">
+                <div class="quem-title">
+                    Quem sou
+                </div>
+                <div class="quem-description">
+                    <!-- quem sou -->
+                    <p>Meu nome é Augusto. Eu sou um programador júnior e já fiz vários cursos de programação que me
+                        deram
+                        conhecimentos nas diversas áreas do desenvolvimento para web além de ser estudante de Ciência
+                        da Computação na UFMS.</p>
+                    <p>Atualmente sei programar com HTML, CSS, Javascript, além de saber trabalhar com Node.js e
+                        Express.</p>
+                    <p>Também sei criar e gerenciar campanhas no Google Ads.</p>
+                    <p>Meu objetivo é crescer profissionalmente, ajudando você a aumentar seu negócio, seja você um
+                        profissional liberal, autônomo ou uma pequena empresa.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
