--- a/views/peca-seu-site.ejs
+++ b/views/peca-seu-site.ejs
@@ -209,6 +209,100 @@
             </div>
         </div>
     </div>
+
+    <!-- Cursos -->
+    <div class="cursos">
+        <header class="cursos-header">
+            <div class="curso-title big">
+                Currículo
+            </div>
+            <div class="curso-description center">
+                Estes são os cursos que já conclui
+            </div>
+        </header>
+        <div class="cursos-content">
+            <!-- TheWeb dev Botcamp -->
+            <div class="curso">
+                <div class="curso-content">
+                    <div class="curso-img" id="theWebDev"></div>
+                    <div class="curso-txt">
+                        <div class="curso-title">
+                            The Web Developer Bootcamp 2022
+                        </div>
+                        <div class="curso-subtitle">
+                            63h
+                        </div>
+                        <div class="curso-description">
+                            Curso que ensina desenvolvimento web full-stack. <br>
+                            No front-end, trabalha com o básico,
+                            HTML, CSS, Javascript além de ensinar a usar EJS. <br>
+                            No back-end, ensina MongoDB, Node.js, Express
+                            além de ensinar a usar outras bibliotecas como Maptify.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Google Ads -->
+            <div class="curso">
+                <div class="curso-content">
+                    <div class="curso-img" id="googleAds"></div>
+                    <div class="curso-txt">
+                        <div class="curso-title">
+                            Google Ads Completo + Remarketing + Youtube Ads
+                        </div>
+                        <div class="curso-subtitle">
+                            16h
+                        </div>
+                        <div class="curso-description">
+                            Ensina tudo sobre Google Ads: os diferentes tipos de campanha, os diferentes objetivos de
+                            campanha para que servem e quando usá-los. <br>
+                            Além disso, ensina como anunciar no Youtube e remarketing.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Curso Completo de Desenvolvimento Web -->
+            <div class="curso">
+                <div class="curso-content">
+                    <div class="curso-img" id="completoDeDes"></div>
+                    <div class="curso-txt">
+                        <div class="curso-title">
+                            Curso Completo de Desenvolvimento Web
+                        </div>
+                        <div class="curso-subtitle">
+                            34h
+                        </div>
+                        <div class="curso-description">
+                            Este curso de desenvolviment web ensina ensina o básico de programação web usando PHP.
+                            <br>
+                            No front-end ensina a montar páginas com HTML e CSS. <br>
+                            No back-end usa-se PHP e MySQLite.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- UX UI -->
+            <div class="curso">
+                <div class="curso-content">
+                    <div class="curso-img" id="ux"></div>
+                    <div class="curso-txt">
+                        <div class="curso-title">
+                            UX &amp; UI Design Thinking
+                        </div>
+                        <div class="curso-subtitle">
+                            11h
+                        </div>
+                        <div class="curso-description">
+                            Neste curso aprendi a entender as necessidades do usuário, e como construir um produto que
+                            seja voltado para o atendimento dessas necessidades. <br>
+                            Nele aprendi a usar diversas ferramentas de UX como Jornada do Usuário, Persona, Business
+                            Model Canvas. Além de aprender a usar eles em diversos processos com Scrum.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
