Adição de seção portfólio

--- a/views/peca-seu-site.ejs
+++ b/views/peca-seu-site.ejs
@@ -303,6 +303,98 @@
             </div>
         </div>
     </div>
+
+    <div id="valores">
+        <div class="vantagens">
+            Portfólio
+        </div>
+        <!-- Regina Miyahira -->
+        <div class="val">
+            <div class="val-content">
+                <div class="val-img" id="regina"></div>
+                <div class="val-txt">
+                    <div class="val-txt-content">
+                        <div class="val-title">
+                            Psicóloga Regina Miyahira
+                        </div>
+                        <div class="val-subtitle">
+
+                        </div>
+                        <div class="val-description">
+                            <p>Site feito para psicóloga Regina Miyahira para ajudar a aumentar a captação de novos
+                                pacientes.</p>
+                            <p>O site apresenta a psicóloga seu trabalho em algumas áreas específicas da terapia.</p>
+                        </div>
+                        <a class="cta-btn" href="https://reginamiyahira.com/" target="_blank">Visitar site</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Antonio Sérgio -->
+        <div class="val">
+            <div class="val-content" id="invert">
+                <div class="val-txt">
+                    <div class="val-txt-content">
+                        <div class="val-title">
+                            Psicólogo Antonio
+                        </div>
+                        <div class="val-subtitle">
+
+                        </div>
+                        <div class="val-description">
+                            <p>Site feito para psicólogo Antonio Sergio para apresentá-lo de forma mais elegante e
+                                eficiente.</p>
+                            <p>Tem páginas separadas para abordar assuntos como Depressão e TCC, além de páginas para
+                                contato.</p>
+                        </div>
+                        <a class="cta-btn" href="https://psicologoantonio.herokuapp.com/" target="_blank">Visitar
+                            site</a>
+                    </div>
+                </div>
+                <div class="val-img" id="antonio"></div>
+            </div>
+        </div>
+        <!-- YelpCamp -->
+        <div class="val">
+            <div class="val-content">
+                <div class="val-img" id="yelpcamp"></div>
+                <div class="val-txt">
+                    <div class="val-txt-content">
+                        <div class="val-title">
+                            YelpCamp
+                        </div>
+                        <div class="val-subtitle">
+
+                        </div>
+                        <div class="val-description">
+                            <p>Site feito a partir do curso The Web Developer Bootcamp.</p>
+                            <p>O site consegue cadastrar, editar e excluir usuários e acampamentos. Podendo adicionar
+                                imagens e ocalizações no mapa</p>
+                        </div>
+                        <a class="cta-btn" href="https://mycodeyelpcamp.herokuapp.com/" target="_blank">Visitar
+                            site</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- CTA2 -->
+    <div id="cta-3">
+        <div class="cta-1-txt-content" id="cta-2-txt-content">
+            <div class="cta-1-title">
+                Tenha mais cliente / pacientes ou serviços
+            </div>
+            <div class="cta-2-subtitle" id="cta-2-subtitle">
+                Peça já seu site e conquiste novos clientes
+            </div>
+            <div class="cta-btn-div">
+                <a class="cta-btn-white" id="cta-btn-big"
+                    href="https://wa.me/5567998051995?text=Eu%20quero%20pedir%20um%20site" target="_blank">Pedir
+                    site</a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
