--- a/public/stylesheets/peca-seu-site-estilo.css
+++ b/public/stylesheets/peca-seu-site-estilo.css
@@ -88,6 +88,20 @@ body {
     text-decoration: none;
 }
 
+.cta-btn-white {
+    background-color: white;
+    color: black;
+    border: none;
+    border-radius: 5%;
+    padding: 0.5rem;
+    font-weight: 700;
+    font-size: 1rem;
+    font-family: 'Playfair Display', serif;
+    margin: 0.1rem;
+    transition: 0.625s;
+    text-decoration: none;
+}
+
 #cta-btn-big {
     font-size: 1.5rem;
     padding: 0.75rem;
@@ -98,7 +112,8 @@ body {
     background-color: #002134;
 }
 
-.cta-btn-black:hover {
+.cta-btn-black:hover,
+.cta-btn-white:hover {
     font-size: 1.1rem;
     background-color: antiquewhite;
     color: #000;
@@ -108,10 +123,17 @@ body {
     background-color: #055190;
 }
 
+#cta-3 {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../img/cta3.jpg');
+    background-size: cover;
+    background-position: 50% 50%;
+    color: white;
+}
+
 @media (max-width: 576px) {
     #cta-1-content {
         min-height: auto;
-        background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8)), url('../img/cta1.jpg');
+        background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../img/cta1.jpg');
         background-size: cover;
         background-position: 50% 50%;
     }
@@ -171,6 +193,18 @@ body {
 
 #val-esforco {
     background-image: url('../img/valEsforco.jpg');
+}
+
+#regina {
+    background-image: url('../img/regina.png');
+}
+
+#antonio {
+    background-image: url('../img/antonio.png');
+}
+
+#yelpcamp {
+    background-image: url('../img/yelpcamp.png');
 }
 
 .val-txt {
