--- a/views/peca-seu-site.ejs
+++ b/views/peca-seu-site.ejs
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peça seu site</title>
+    <title>AugustoHS | Peça seu site</title>
     <link rel="stylesheet" href="stylesheets/peca-seu-site-estilo.css">
+    <link rel="stylesheet" href="stylesheets/bootstrap.css">
+    <script type="text/javascript" src="javascripts/bootstrap.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,6 +19,44 @@
 </head>
 
 <body>
+
+    <header>
+        <nav class="navbar navbar-expand-lg ">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="">AugustoHS</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                            class="bi bi-menu-app" viewBox="0 0 16 16">
+                            <path
+                                d="M0 1.5A1.5 1.5 0 0 1 1.5 0h2A1.5 1.5 0 0 1 5 1.5v2A1.5 1.5 0 0 1 3.5 5h-2A1.5 1.5 0 0 1 0 3.5v-2zM1.5 1a.5.5 0 0 0-.5.5v2a.5.5 0 0 0 .5.5h2a.5.5 0 0 0 .5-.5v-2a.5.5 0 0 0-.5-.5h-2zM0 8a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V8zm1 3v2a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2H1zm14-1V8a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2h14zM2 8.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0 4a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5z" />
+                        </svg>
+                    </span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#valores">O que é</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#vantagens">Vantagens</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#quemsou">Quem Sou</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#portfolio">Portfólio</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
     <div id="cta-1">
         <div id="cta-1-content">
             <div id="cta-1-txt">
@@ -60,7 +100,7 @@
                 </div>
             </div>
         </div>
-        <div class="vantagens">
+        <div class="vantagens" id="vantagens">
             Vantagens
         </div>
         <!-- Visibilidade -->
@@ -187,7 +227,7 @@
     </div>
 
     <!-- Quem sou -->
-    <div class="quem">
+    <div class="quem" id="quemsou">
         <div class="quem-content">
             <div class="quem-foto"></div>
             <div class="quem-txt">
@@ -304,8 +344,8 @@
         </div>
     </div>
 
-    <div id="valores">
-        <div class="vantagens">
+    <div id="port">
+        <div class="vantagens" id="portfolio">
             Portfólio
         </div>
         <!-- Regina Miyahira -->
@@ -395,6 +435,12 @@
             </div>
         </div>
     </div>
+
+    <footer id="footer">
+        <div class="f-content">
+            Site Criado por <a href="https://www.linkedin.com/in/augusto-sakihama/">AugustoHS</a>
+        </div>
+    </footer>
 </body>
 
 </html>
